--- a/modules/releases/templates/apache-jenkins.conf.erb
+++ b/modules/releases/templates/apache-jenkins.conf.erb
@@ -16,8 +16,8 @@
     ProxyRequests Off
     ProxyVia Off
     ProxyPreserveHost On
-    ProxyPass /<%= @prefix -%> http://127.0.0.1:<%= @http_port -%><%= @prefix -%>/ retry=0 nocanon
-    ProxyPassReverse /<%= @prefix -%> http://localhost:<%= @http_port -%><%= @prefix -%>
+    ProxyPass <%= @prefix -%> http://127.0.0.1:<%= @http_port -%><%= @prefix -%>/ retry=0 nocanon
+    ProxyPassReverse <%= @prefix -%> http://localhost:<%= @http_port -%><%= @prefix -%>
 
     ErrorLog /var/log/apache2/<%= @sitename_jenkins %>.error.log
 
@@ -29,7 +29,7 @@
     # Local reverse proxy authorization override
     # Most unix distribution deny proxy by default (ie /etc/apache2/mods-enabled/proxy.conf in Debian)
 
-    <Proxy http://localhost:<%= @http_port -%>/<%= @prefix -%>*>
+    <Proxy http://localhost:<%= @http_port -%><%= @prefix -%>*>
 
         # user agent blacklisting for Jenkins
         SetEnvIf User-Agent 80legs bad_browser
