wdqs: add -XX:+UnlockExperimentalVMOptions
to enable using G1 experimental tuning

Change-Id: Ie2dc978c886ebe8b80fdab4c84dd05dc2c5bd805

--- a/modules/wdqs/templates/blazegraph-default.erb
+++ b/modules/wdqs/templates/blazegraph-default.erb
@@ -12,5 +12,5 @@ GC_LOGS="-XX:+PrintGCDetails \
          -XX:NumberOfGCLogFiles=10 \
          -XX:GCLogFileSize=20M \
          -XX:+ParallelRefProcEnabled \
-         -UnlockExperimentalVMOptions \
+         -XX:+UnlockExperimentalVMOptions \
          -XX:G1MaxNewSizePercent=25"
