wdqs: send GC lgos to file
Bug: T175919
Change-Id: I90ca155dae4dcb57e04ad5e946297938154397ff

--- a/modules/wdqs/templates/blazegraph-default.erb
+++ b/modules/wdqs/templates/blazegraph-default.erb
@@ -1,7 +1,8 @@
 HEAP_SIZE="<%= @blazegraph_heap_size %>"
 BLAZEGRAPH_OPTS="<%= @blazegraph_options %>"
 LOG_CONFIG=/etc/wdqs/logback-wdqs-blazegraph.xml
-GC_LOGS="-XX:+PrintGCDetails \
+GC_LOGS="-Xloggc:<%= @log_dir %>/wdqs-blazegraph_jvm_gc.%p.log
+         -XX:+PrintGCDetails \
          -XX:+PrintGCDateStamps \
          -XX:+PrintGCTimeStamps \
          -XX:+PrintAdaptiveSizePolicy \
