package_builder: add support for WIKIMEDIA_EXPERIMENTAL
In order to use packages uploaded to experimental as build dependencies,
check if the WIKIMEDIA_EXPERIMENTAL environment variable is set to "yes"
in D01apt.wikimedia.org and if so enable the experimental component.

Change-Id: I9b838b3f5072edb886e0e01b7dea86634bd64d20

--- a/modules/package_builder/templates/D01apt.wikimedia.org.erb
+++ b/modules/package_builder/templates/D01apt.wikimedia.org.erb
@@ -11,6 +11,11 @@ EOF
 	Pin: release o=Wikimedia
 	Pin-Priority: 1001
 EOF
+
+	if [ "${WIKIMEDIA_EXPERIMENTAL}" = "yes" ]; then
+		echo 'deb <%= @mirror %> <%= @distribution %>-wikimedia experimental' > /etc/apt/sources.list.d/wikimedia-experimental.list
+	fi
+
 	apt-get install wget gnupg -y
 	wget -O - -o /dev/null http://apt.wikimedia.org/autoinstall/keyring/wikimedia-archive-keyring.gpg | apt-key add -
 	apt-get update
