varnish: stop passing session_max
The `session_max` parameter has been removed in Varnish 5. Further, it
had no effect since Varnish 4. Get rid of it.

Bug: T168529
Ref: https://varnish-cache.org/docs/5.0/whats-new/upgrading-5.0.html#changes-to-parameters
Change-Id: I473639f9c14d2b6f429dec16532b1d109fb126b6

--- a/modules/varnish/templates/initscripts/varnish.systemd.erb
+++ b/modules/varnish/templates/initscripts/varnish.systemd.erb
@@ -28,7 +28,7 @@ ExecStart=<%= @start_cmd_prefix %>/usr/sbin/varnishd \
 -S /etc/varnish/secret \
 <%= @storage -%> \
 -p thread_pool_stack=131072 \
--p listen_depth=4096 -p session_max=200000 -p vcc_err_unref=off \
+-p listen_depth=4096 -p vcc_err_unref=off \
 -p http_req_size=24576 \
 -p gethdr_extrachance=0 \
 -p gzip_level=8 \
