druid: add log4j logger to direct metrics to a specific file
As far as I can understand, at the moment the druid daemons
are sending all their stream of log4j logs to single files
called $daemon.log. This change introduces a new file called
$daemon-metrics.log, that should collect the json struct values
without mixing them with other data and without wrapping it
with unnecessary info like date/time, class that generated them,
etc.. The final goal is to have a prometheus agent reading
this file and exposing metrics (re-formatted according to
Prometheus' standards).

Bug: T177459
Change-Id: I78c789ae42b0e8ad9101048cb599e64a3dd2701a

--- a/modules/druid/templates/log4j2.xml.erb
+++ b/modules/druid/templates/log4j2.xml.erb
@@ -13,9 +13,20 @@
             </Policies>
             <DefaultRolloverStrategy max="4"/>
         </RollingFile>
+        <RollingFile name="RollingMetricsFile"
+            fileName="/var/log/druid/<%= @service %>-metrics.log"
+            filePattern="/var/log/druid/<%= @service %>-metrics.%i.log">
+            <Policies>
+                <SizeBasedTriggeringPolicy size="10 MB"/>
+            </Policies>
+            <DefaultRolloverStrategy max="15"/>
+        </RollingFile>
     </Appenders>
 
     <Loggers>
+        <Logger name="com.metamx.emitter.core.LoggingEmitter" level="info" additivity="false">
+          <AppenderRef ref="RollingMetricsFile"/>
+        </Logger>
         <Root level="info">
             <AppenderRef ref="RollingFile"/>
         </Root>
