varnish: support for version 5
Introduce a new hiera setting, varnish::major_version, defaulting to 4.

Use the shard built-in director if the major version is set to 5, vslp
otherwise.

Bug: T168529
Change-Id: I5c4e53a6a3242a62a951dba202b4ff5feb9c1382

--- a/modules/varnish/templates/vcl/directors.vcl.tpl.erb
+++ b/modules/varnish/templates/vcl/directors.vcl.tpl.erb
@@ -1,12 +1,20 @@
 
 <% @directors.keys.sort.each do |director_name|
 director = @directors[director_name] -%>
+
+<% if @varnish_version == 5 -%>
+new <%= director_name %> = directors.shard();
+<% else -%>
 new <%= director_name %> = vslp.vslp();
+<% end -%>
+
 new <%= director_name %>_random = directors.random();
 <%- keyspace = "#{@conftool_namespace}/#{director['dc']}/#{@group}/#{director['service']}" -%>
 	{{range $node := ls "<%= keyspace %>/"}}{{ $key := printf "<%= keyspace %>/%s" $node }}{{ $data := json (getv $key) }}{{ if eq $data.pooled "yes"}}
     <%= director_name %>.add_backend(be_{{ $parts := split $node "." }}{{ join $parts "_" }});
     <%= director_name %>_random.add_backend(be_{{ $parts := split $node "." }}{{ join $parts "_" }}, {{ $data.weight }});
 	{{end}}{{end}}
+<% if @varnish_version == 4 -%>
 <%= director_name %>.init_hashcircle(150);
+<% end -%>
 <% end # directors loop %>
