phragile: Allow .htaccess needed by the app
Phragile relies on "beautiful paths" using mod_rewrite, that it
defines in its own .htaccess. Therefore mod_rewrite's directives
should be allowed in there.

Using .htaccess has been disabled for phragile in
I1dad37d63cc3bbc1a6737c890854913e047c7bae.

Change-Id: I5c48bff2cfd10272a581c8db4182d8e88061b5a9

--- a/modules/phragile/templates/apache.conf.erb
+++ b/modules/phragile/templates/apache.conf.erb
@@ -5,7 +5,7 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^ /index.php [L]
 
 <Directory />
-  AllowOverride None
+  AllowOverride FileInfo Options=MultiViews
   Require all granted
 </Directory>
 
