Remove dbstore2 role, make dbstore default to the new socket location
We will keep socket location for now of dbstore1001 (which is going
to be converted into dbstore_multiinstance anyway), but we change
dbstore1002 one, which is about to be restarted.

Move firewall to the role.

Bug: T168303
Change-Id: Iae6ac71fe66a1f40c63461b00a430ac820f0ec86

--- a/modules/role/templates/mariadb/mysqld_config/dbstore.my.cnf.erb
+++ b/modules/role/templates/mariadb/mysqld_config/dbstore.my.cnf.erb
@@ -3,8 +3,7 @@
 # Please use separate .cnf templates for each type of server.
 
 [client]
-port   = 3306
-socket = /tmp/mysql.sock
+socket = <%= @socket %>
 <% if @ssl == 'on' or @ssl == 'puppet-cert' %>
 # ssl
 ssl-ca=/etc/ssl/certs/Puppet_Internal_CA.pem
@@ -21,7 +20,7 @@ skip-slave-start
 temp-pool
 
 user      = mysql
-socket    = /tmp/mysql.sock
+socket    = <%= @socket %>
 port      = 3306
 basedir   = <%= @basedir %>
 datadir   = <%= @datadir %>
