Add library hint for gdk-pixbuf
Change-Id: Ic6a4185e9f40d8864b94e5e62b0dfaa39e4afece

--- a/modules/profile/templates/debdeploy/debdeploy.erb
+++ b/modules/profile/templates/debdeploy/debdeploy.erb
@@ -7,6 +7,7 @@ stretch = debian, 9
 [libraries]
 file = libmagic
 freexl = libfreexl
+gdk-pixbuf = libgdk_pixbuf_xlib-2.0, libgdk_pixbuf-2.0
 ghostscript = libgs
 gnutls28 = libgnutls-openssl, libgnutls-deb0, libgnutls
 libgd2 = libgd
