wikiba.se: Remove colon from VirtualHost
it's invalid syntax.

Also fix DocumentRoot to use /srv/es/wikiba instead of /srv/se/wikiba.

Change-Id: I0c2b9dbc9b6fc3b7f710b772aa3cad7318e4b589

--- a/modules/profile/templates/wikibase/apache-wikibase.erb
+++ b/modules/profile/templates/wikibase/apache-wikibase.erb
@@ -1,7 +1,7 @@
-<VirtualHost: *:80>
+<VirtualHost *:80>
     ServerName <%= @server_name %>
     ServerAdmin <%= @server_admin %>
-    DocumentRoot /srv/se/wikiba/
+    DocumentRoot /srv/es/wikiba/
 
     ServerSignature On
 
