--- a/modules/profile/templates/wikibase/apache-wikibase.erb
+++ b/modules/profile/templates/wikibase/apache-wikibase.erb
@@ -1,4 +1,4 @@
-<VirtualHost: *:80>
+<VirtualHost *:80>
     ServerName <%= @server_name %>
     ServerAdmin <%= @server_admin %>
     DocumentRoot /srv/se/wikiba/
