--- a/modules/profile/templates/wikibase/apache-wikibase.erb
+++ b/modules/profile/templates/wikibase/apache-wikibase.erb
@@ -1,7 +1,7 @@
-<VirtualHost: *:80>
+<VirtualHost *:80>
     ServerName <%= @server_name %>
     ServerAdmin <%= @server_admin %>
-    DocumentRoot /srv/se/wikiba/
+    DocumentRoot /srv/es/wikiba/
 
     ServerSignature On
 
@@ -14,7 +14,7 @@
         AllowOverride None
     </Directory>
 
-    <Directory /srv/se/wikiba>
+    <Directory /srv/es/wikiba>
         Options Indexes FollowSymLinks MultiViews
         AllowOverride None
         Require all granted
