wikiba.se: Fix docroot to /srv/se/wikiba/output
It seems the correct path is /srv/se/wikiba/output and not just
/srv/se/wikiba/

Change-Id: I68210e80d8f7fe67e746bbb46e64208b43cf02bc

--- a/modules/profile/templates/wikibase/apache-wikibase.erb
+++ b/modules/profile/templates/wikibase/apache-wikibase.erb
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
     ServerName <%= @server_name %>
     ServerAdmin <%= @server_admin %>
-    DocumentRoot /srv/se/wikiba/
+    DocumentRoot /srv/se/wikiba/output
 
     ServerSignature On
 
@@ -14,7 +14,7 @@
         AllowOverride None
     </Directory>
 
-    <Directory /srv/se/wikiba>
+    <Directory /srv/se/wikiba/output>
         Options Indexes FollowSymLinks MultiViews
         AllowOverride None
         Require all granted
