Add library hint for curl
Change-Id: I3795f7f56495892fa49c1c65fcc6f603f6b3609a

--- a/modules/profile/templates/debdeploy/debdeploy.erb
+++ b/modules/profile/templates/debdeploy/debdeploy.erb
@@ -5,6 +5,7 @@ jessie = debian, 8
 stretch = debian, 9
 
 [libraries]
+curl = libcurl, libcurl-gnutls
 file = libmagic
 freexl = libfreexl
 gdk-pixbuf = libgdk_pixbuf_xlib-2.0, libgdk_pixbuf-2.0
