Add library hint for libxfont
Change-Id: I474e53d45ce07592d8d9c9b6a3371a7034851bcf

--- a/modules/profile/templates/debdeploy/debdeploy.erb
+++ b/modules/profile/templates/debdeploy/debdeploy.erb
@@ -15,6 +15,7 @@ libgd2 = libgd
 libidn = libidn
 libidn2-0 = libidn2
 libonig = libonig
+libxfont = libXfont
 libxml2 = libxml2
 openssl = libssl, libcrypto
 pam = libpam, libpamc, libpam_misc
