Add library hint for db5.3
Change-Id: I9bdb337117d240b1ad2d8905e1c46c3bfbdf04a0

--- a/modules/profile/templates/debdeploy/debdeploy.erb
+++ b/modules/profile/templates/debdeploy/debdeploy.erb
@@ -6,6 +6,7 @@ stretch = debian, 9
 
 [libraries]
 curl = libcurl, libcurl-gnutls
+db5.3 = libdb-5.3
 file = libmagic
 freexl = libfreexl
 gdk-pixbuf = libgdk_pixbuf_xlib-2.0, libgdk_pixbuf-2.0
