ocg: remove all references from puppet
In order for this not to break anything, ocg must be turned off in
deployment-prep too.

Bug: T177931
Change-Id: Ib918fca3149d52703c547140edccbb1b20a20a74

--- a/modules/profile/templates/cumin/aliases.yaml.erb
+++ b/modules/profile/templates/cumin/aliases.yaml.erb
@@ -128,7 +128,7 @@ mx: P{R:class = role::mail::mx}
 mx-canary: P{mx2001.wikimedia.org}
 netmon: P{R:class = role::network::monitor}
 notebook: P{R:class = role::paws_internal::jupyterhub}
-ocg: P{R:class = role::ocg}
+ocg: P{ocg*}
 openldap: P{R:class = role::openldap::corp or R:class = role::openldap::labs}
 openldap-canary: P{dubnium.wikimedia.org}
 oresrdb: P{R:class = role::ores::redis}
