Add library hint for openldap
Change-Id: Ie846540dd653a0bebeb83402294d14672ecc6963

--- a/modules/profile/templates/debdeploy/debdeploy.erb
+++ b/modules/profile/templates/debdeploy/debdeploy.erb
@@ -18,6 +18,7 @@ libidn2-0 = libidn2
 libonig = libonig
 libxfont = libXfont
 libxml2 = libxml2
+openldap = libldap-2.4, liblber-2.4, libldap_r-2.4
 openssl = libssl, libcrypto
 pam = libpam, libpamc, libpam_misc
 poppler = libpoppler
