Temporarily silence noisy warnings for dictionary upgrade
Bug: T175948
Change-Id: I3bb75be1d497780ced1f356bfb3e8cc81cf8faaa

--- a/modules/wdqs/templates/logback.xml.erb
+++ b/modules/wdqs/templates/logback.xml.erb
@@ -23,4 +23,7 @@
         <appender-ref ref="STDOUT"/>
         <appender-ref ref="logstash"/>
     </root>
+    <!-- Temporarily shut up warnings about "No vocabulary entry for namespace" for T175948 -->
+    <logger name="com.bigdata.rdf.internal.InlineURIHandler" level="ERROR"/>
+
 </configuration>
