Add library hint for NSS
Change-Id: I1a744214312e20cdb765e2f4b753db80aae49489

--- a/modules/profile/templates/debdeploy/debdeploy.erb
+++ b/modules/profile/templates/debdeploy/debdeploy.erb
@@ -18,6 +18,7 @@ libidn2-0 = libidn2
 libonig = libonig
 libxfont = libXfont
 libxml2 = libxml2
+nss = libnss3, libnssutil3, libsmime3, libssl3, nss/libnssdbm3, nss/libsoftokn3, nss/libnssckbi, nss/libfreeblpriv3, nss/libfreebl3
 openldap = libldap-2.4, liblber-2.4, libldap_r-2.4
 openssl = libssl, libcrypto
 pam = libpam, libpamc, libpam_misc
